--- a/brain-api/package.json
+++ b/brain-api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
@@ -14,12 +14,12 @@
     "clarifai": "^2.9.1",
     "clarifai-nodejs-grpc": "^8.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "heroku": "^7.3.0",
     "knex": "^2.3.0",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   },
   "description": ""
 }
