--- a/Chatgpt-clone/package.json
+++ b/Chatgpt-clone/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "normalize.css": "^8.0.1",
+    "openai": "^3.1.0"
   }
 }
