--- a/LiveChat-T3-stack/livechat-t3/package.json
+++ b/LiveChat-T3-stack/livechat-t3/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "nanoid": "^4.0.1",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
@@ -25,21 +26,27 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.0",
+    "@types/node-fetch": "^2.5.11",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.7",
+    "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
